# txt2stories

./: LICENSE  README.md  pyproject.toml
data/: README.md
data/generated_US_unbound_limit/: system_prompt.txt  user_prompt.txt
data/public_interview/: Qwen3-0.6B_report.txt  Qwen3-1.7B_report.txt  Qwen3-14B_report.txt  Qwen3-32B_report.txt  Qwen3-4B_report.txt  Qwen3-8B_report.txt  all_pairs_annotated.csv  chunks_turns_3s1.csv  int1.txt  system_prompt_v1_final_metric.txt  user_stories.csv
data/public_system_desc/: Qwen3-0.6B_report.txt  Qwen3-1.7B_report.txt  Qwen3-14B_report.txt  Qwen3-32B_report.txt  Qwen3-4B_report.txt  Qwen3-8B_report.txt  all_pairs_annotated.csv  chunks_turns_3s1.csv  int1.txt  system_prompt_v1_final_metric.txt  user_stories.csv
data_annotation/: Inter_annotation_agreement.csv  README.md  g01_user_stories.csv  g04_user_stories.csv  random_user_story_draw.py
eval/ablation_chunking_alignment_quality/: README.md  baseline_LLM.py
eval/ablation_chunking_blocking_efficiency/: README.md
eval/ablation_metric_robustness/: README.md  config_robustness.txt  text2stories_batch.py
eval/ablation_threshold_calibration/: README.md
eval/blocking_operator/: README.md  blocking_benchmark.py
eval/pairwise_alignment_quality/: LLM_llama_supervised_evaluate.py  LLM_qwen_supervised_evaluate.py  README.md  embedding_model_supervised_evaluate.py  reranker_model_supervised_evaluate.py
eval/text2stories_metric/: README.md  comparison_H_diff_LLM.csv  config.txt  text2stories_batch.py  (+2 more)
train/: README.md  embedding_model_train.py
(+30 files in other folders)
