[project]
name = "text2stories"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "ace-tools>=0.0",
    "bitsandbytes>=0.46.1",
    "datasets>=3.6.0",
    "evaluate>=0.4.5",
    "faiss-cpu>=1.12.0",
    "huggingface-hub>=0.35.0rc0",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "pandas>=2.3.0",
    "peft>=0.15.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "transformers>=4.55.4",
    "trl>=0.22.2",
    "vllm>=0.10.1.1",
]
